[gd_scene load_steps=5 format=3 uid="uid://tmf60ssbg0hv"]

[ext_resource type="Script" path="res://GUI/settings.gd" id="1_xkw7m"]
[ext_resource type="AudioStream" uid="uid://dx2kjuwdmuji3" path="res://GUI/click.mp3" id="2_qpjlk"]

[sub_resource type="LabelSettings" id="LabelSettings_yy2ru"]
font_size = 64

[sub_resource type="LabelSettings" id="LabelSettings_b6nhv"]
font_size = 32

[node name="Settings" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_xkw7m")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.298039, 0.521569, 0.368627, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 121.0
grow_horizontal = 2
theme_override_constants/margin_top = 30

[node name="Label" type="Label" parent="MarginContainer"]
layout_mode = 2
text = "Settings"
label_settings = SubResource("LabelSettings_yy2ru")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Buttons" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -4.0
offset_top = -10.0
offset_right = 4.0
offset_bottom = 10.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 30
alignment = 1

[node name="Volume" type="HBoxContainer" parent="Buttons"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 10
alignment = 1

[node name="Label" type="Label" parent="Buttons/Volume"]
layout_mode = 2
size_flags_horizontal = 4
text = "Volume"
label_settings = SubResource("LabelSettings_b6nhv")

[node name="HSlider" type="HSlider" parent="Buttons/Volume"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
min_value = 25.0
max_value = 90.0
value = 50.0

[node name="BackButton" type="Button" parent="Buttons"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 64
text = "Back"

[node name="ButtonTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="ClickSoundEffect" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_qpjlk")

[connection signal="value_changed" from="Buttons/Volume/HSlider" to="." method="_on_h_slider_value_changed"]
[connection signal="pressed" from="Buttons/BackButton" to="." method="_on_back_button_pressed"]
